--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "hooks": {
       "pre-commit": "npm run prettier-format && npm run lint"
     }
-  },  
+  },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/faker": "^6.6.9",
+    "@types/json-server": "^0.14.4",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
@@ -35,5 +38,10 @@
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "commander": "^11.0.0",
+    "json-server": "^0.17.3"
   }
 }
