--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
+    "@types/express": "^4.17.17",
     "@types/faker": "^6.6.9",
     "@types/json-server": "^0.14.4",
     "@types/node": "^20.3.1",
